Make Rooms page the home page and utilize the shared "accessible" spec

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,4 @@
 en:
   site:
-    title: "PCOE de Signage | %{name}"
-    app_name: "PCOE de Signage"
+    title: "PCOE Project Rooms | %{name}"
+    app_name: "PCOE Project Rooms"
