Al the styling improvements!

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -7,4 +7,4 @@ en:
       event:
         ohioid: OHIO ID
 
-  scan-qr-code_html: Scan QR code to<br />schedule room
+  scan-qr-code_html: Scan QR code to schedule room
